Diseño de logo y ajustes en el formsearch

--- a/src/styles/blocks/search-form.styl
+++ b/src/styles/blocks/search-form.styl
@@ -1,7 +1,11 @@
 .search-form
     margin-top 30px
 #fch-button
-    
+    background blue
+    color #fff
+
+#fch-button[disabled]
+    background grey
 
 /*
     for responsive
