--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -5,11 +5,23 @@
   max-width: 960px;
   margin: 0 auto;
 }
+header {
+  background: #f8f9fa;
+}
+.logo img {
+  width: 220px;
+}
 .search-form {
   margin-top: 30px;
 }
+#fch-button {
+  background: #00f;
+  color: #fff;
+}
+#fch-button[disabled] {
+  background: #808080;
+}
 @media only screen and (max-width: 650px) {
-  #fch-button,
   .search-form {
     display: none;
   }
