--- a/src/index.pug
+++ b/src/index.pug
@@ -13,7 +13,8 @@ html(lang="es")
         .app.pure-g
             header.pure-u-1
                 .pure-u-1-3
-                    h1.logo Finder challenge!
+                    h1.logo
+                        img(src="/img/logo.jpg")
                 .pure-u-7-24
                     include blocks/search-form
                 .pure-u-1-3
