--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,25 +1,88 @@
 * {
   font-family: "Proxima Nova";
+  -webkit-font-smoothing: antialiased;
 }
 .app {
   max-width: 960px;
   margin: 0 auto;
 }
 header {
-  background: #f8f9fa;
+  background: #1769bb;
+  height: 122px;
+  border-bottom: 1px solid #154879;
 }
 .logo img {
   width: 220px;
+  display: none;
+}
+content div.pure-u-1-3 .holder {
+  text-align: center;
+  margin: 25px 0 0;
+  padding: 20px;
+}
+content div.pure-u-1-3 .holder span {
+  text-align: left;
+  display: block;
+  font-size: 13px;
+}
+h1 {
+  font-size: 18px;
+}
+a {
+  display: block;
 }
 .search-form {
-  margin-top: 30px;
+  margin-top: 35px;
+}
+#fch-input {
+  font-size: 1.25rem;
+  background-color: #fff;
+  border-color: #dbdbdb;
+  color: #363636;
+  box-shadow: inset 0 1px 2px rgba(10,10,10,0.1);
+  max-width: 120%;
+  width: 120%;
+  -webkit-appearance: none;
+  align-items: center;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  display: inline-flex;
+  height: 1.25em;
+  justify-content: flex-start;
+  line-height: 0.75;
+  padding-bottom: calc(0.375em - 1px);
+  padding-left: calc(0.625em - 1px);
+  padding-right: calc(0.625em - 1px);
+  padding-top: calc(0.375em - 1px);
+  position: relative;
+  vertical-align: top;
 }
 #fch-button {
-  background: #00f;
+  background: #ff8700;
   color: #fff;
+  font-size: 1.25rem;
+  border-color: #ce6e02;
+  border-width: 1px;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  justify-content: center;
+  padding-bottom: calc(0.375em - 1px);
+  padding-left: 0.75em;
+  padding-right: 0.75em;
+  padding-top: calc(0.375em - 1px);
+  text-align: center;
+  white-space: nowrap;
+  display: inline-block;
+  position: absolute;
+  margin: 0 0 0 75px;
 }
 #fch-button[disabled] {
-  background: #808080;
+  opacity: 0.5;
+}
+.linksearch {
+  padding: 33px 0;
+  position: absolute;
 }
 @media only screen and (max-width: 650px) {
   .search-form {
