--- a/src/styles/blocks/app.styl
+++ b/src/styles/blocks/app.styl
@@ -2,6 +2,26 @@
     max-width 960px
     margin 0 auto
 header
-    background #f8f9fa
+    background #1769bb
+    height 122px
+    border-bottom 1px solid #154879
 .logo img
     width 220px
+    display none
+
+content
+    div.pure-u-1-3
+        .holder
+            text-align center
+            margin 25px 0 0
+            padding 20px
+            span
+                text-align left
+                display block
+                font-size 13px
+
+/*Globals*/
+h1
+    font-size 18px
+a
+    display block
