--- a/src/styles/blocks/search-form.styl
+++ b/src/styles/blocks/search-form.styl
@@ -1,12 +1,52 @@
 .search-form
-    margin-top 30px
+    margin-top 35px
+#fch-input
+    font-size 1.25rem
+    background-color #fff
+    border-color #dbdbdb
+    color #363636
+    box-shadow inset 0 1px 2px rgba(10,10,10,.1)
+    max-width 120%
+    width 120%
+    -webkit-appearance none
+    align-items center
+    border 1px solid transparent
+    border-radius 4px
+    display inline-flex
+    height 1.25em
+    justify-content flex-start
+    line-height 0.75
+    padding-bottom calc(.375em - 1px)
+    padding-left calc(.625em - 1px)
+    padding-right calc(.625em - 1px)
+    padding-top calc(.375em - 1px)
+    position relative
+    vertical-align top
 #fch-button
-    background blue
+    background #ff8700
     color #fff
+    font-size 1.25rem
+    border-color #ce6e02
+    border-width 1px
+    border-radius 4px
+    color #fff
+    cursor pointer
+    justify-content center
+    padding-bottom calc(.375em - 1px)
+    padding-left .75em
+    padding-right .75em
+    padding-top calc(.375em - 1px)
+    text-align center
+    white-space nowrap
+    display inline-block
+    position absolute
+    margin 0 0 0 75px
 
 #fch-button[disabled]
-    background grey
-
+    opacity .5
+.linksearch
+    padding 33px 0
+    position absolute
 /*
     for responsive
 */
