--- a/src/styles/blocks/search-form.styl
+++ b/src/styles/blocks/search-form.styl
@@ -45,8 +45,9 @@
 #fch-button[disabled]
     opacity .5
 .linksearch
-    padding 33px 0
+    padding 43px 0
     position absolute
+    color orange
 /*
     for responsive
 */
