--- a/src/styles/blocks/app.styl
+++ b/src/styles/blocks/app.styl
@@ -7,7 +7,6 @@ header
     border-bottom 1px solid #154879
 .logo img
     width 220px
-    display none
 
 content
     div.pure-u-1-3
@@ -19,6 +18,18 @@ content
                 text-align left
                 display block
                 font-size 13px
+
+aside
+    padding-top 25px
+    a
+        background #ddd
+        padding 10px 10px 10px 20px
+        margin-bottom 2px
+        text-decoration none
+        color #363636
+    a:hover
+        background #3e3d3d
+        color #fff
 
 /*Globals*/
 h1
